--- a/book_store/pubspec.yaml
+++ b/book_store/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - image/
-  #   - images/a_dot_ham.jpeg
+    - book_store/image/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
