--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  image_picker: ^1.1.2
   intl: ^0.19.0
+  shared_preferences: ^2.3.2
+  flex_color_scheme: ^7.3.1
+  cached_network_image: ^3.4.1
+  in_app_review: ^2.0.9
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
- 
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -63,7 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - image/
-    - book_store/image/
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
